# python-vuln-demo

./: LICENSE  README.md  SECURITY_UPDATE.md  blackduck_remediation_report.md  main.py  pyproject.toml  requirements.txt  test_yaml_functionality.py  trivy_remediation_report.md
.github/: dependabot.yml
