[project]
name = "python-vuln-demo"
version = "0.1.0"
description = "Intentionally vulnerable Python demo app managed with uv for security scanning demos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask==2.2.5",
  "requests==2.32.4",
  "PyYAML==5.3.1",
  "django==4.2.24",
  "jinja2<3.2.0",
  "werkzeug<4.0.0",
  "itsdangerous<1.0.0"
]